added structure for index site. section, footer and so on.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Spa and Resort for everyone">
+    <meta name="spa, resort, food, everyone">
     <link rel="stylesheet" href="assets/CSS/style.css">
     <title>Document</title>
 </head>
@@ -12,10 +14,19 @@
 <body>
     <header>
         <a href="index.html">
-            <h1> Philip's Spa & Resort</h1>
-        </a>
-
-    </header>
+            <h1> Philip's Spa & Resort (HEADER)</h1>
+        </a> </header>
+   <section>
+    Main image (HERO)
+   </section>
+   <section> SPA pictures & Resort pictures </section>
+   <section>Big announcement! 
+    Try our new pool/dish/resturant/massage
+    with button and picture
+   </section>
+   <footer>
+    link and icons to our social medias
+   </footer>
 </body>
 
 </html>
