added a list for my header. basic structure.

--- a/index.html
+++ b/index.html
@@ -8,25 +8,41 @@
     <meta name="description" content="Spa and Resort for everyone">
     <meta name="spa, resort, food, everyone">
     <link rel="stylesheet" href="assets/CSS/style.css">
-    <title>Document</title>
+    <title>Philip's Spa & Resort</title>
 </head>
 
 <body>
     <header>
         <a href="index.html">
             <h1> Philip's Spa & Resort (HEADER)</h1>
-        </a> </header>
-   <section>
-    Main image (HERO)
-   </section>
-   <section> SPA pictures & Resort pictures </section>
-   <section>Big announcement! 
-    Try our new pool/dish/resturant/massage
-    with button and picture
-   </section>
-   <footer>
-    link and icons to our social medias
-   </footer>
+        </a>
+        <nav>
+            <ul>
+                <li>
+                    <a href="index.html"> Home</a>
+                </li>
+
+                <li>
+                    <a href="#"> Booking</a>
+                </li>
+
+                <li>
+                    <a href="#"> About us</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+    <section>
+        Main image (HERO)
+    </section>
+    <section> SPA pictures & Resort pictures </section>
+    <section>Big announcement!
+        Try our new pool/dish/resturant/massage
+        with button and picture
+    </section>
+    <footer>
+        link and icons to our social medias
+    </footer>
 </body>
 
 </html>
