worked on the header, styling.

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 
 <body>
     <header>
-        <a href="index.html">
-            <h1> Philip's Spa & Resort (HEADER)</h1>
+        <a href="index.html" class="header-heading">
+            <h1> Philip's Spa & Resort</h1>
         </a>
         <nav>
-            <ul>
+            <ul class="navigation-bar">
                 <li>
                     <a href="index.html"> Home</a>
                 </li>
