--- a/index.html
+++ b/index.html
@@ -8,32 +8,35 @@
     <meta name="description" content="Spa and Resort for everyone">
     <meta name="spa, resort, food, everyone">
     <link rel="stylesheet" href="assets/CSS/style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
+
     <title>Philip's Spa & Resort</title>
 </head>
 
 <body>
-    <header>
-        <a href="index.html" class="header-heading">
-            <h1> Philip's Spa & Resort</h1>
+    <header class="hero-section">
+        <a href="index.html">
+            <h1 class="header-heading"> Philip's Spa & Resort</h1>
         </a>
         <nav>
             <ul class="navigation-bar">
                 <li>
-                    <a href="index.html"> Home</a>
+                    <a href="index.html"> Home <i class="bi bi-house-fill"></i></i></a>
                 </li>
 
                 <li>
-                    <a href="#"> Booking</a>
+                    <a href="#"> Booking <i class="bi bi-calendar3"></i></a>
                 </li>
 
                 <li>
-                    <a href="#"> About us</a>
+                    <a href="#"> About us <i class="bi bi-person-vcard-fill"></i> </a>
                 </li>
             </ul>
         </nav>
     </header>
     <section>
-        Main image (HERO)
+      <div > </div>
+
     </section>
     <section> SPA pictures & Resort pictures </section>
     <section>Big announcement!
@@ -43,6 +46,7 @@
     <footer>
         link and icons to our social medias
     </footer>
+
 </body>
 
 </html>
