styled header and icons.

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
 <body>
     <header class="hero-section">
-        <a href="index.html">
-            <h1 class="header-heading"> Philip's Spa & Resort</h1>
+        <a href="index.html" class="header-link">
+            <h1 class="header-heading" > Philip's Spa & Resort</h1>
         </a>
         <nav>
             <ul class="navigation-bar">
