--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
         <section>
             <div class="bottom-right-text">
-                The ultimate luxury for your body, mind, and soul
+                The ultimate luxury for your body, mind, and soul!
 
             </div>
 
