insterted footer, style, and fixed links for the nav-bar!

--- a/booking.html
+++ b/booking.html
@@ -9,6 +9,9 @@
     <meta name="spa, resort, food, everyone">
     <link rel="stylesheet" href="assets/CSS/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Play&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <title>Philip's Spa & Resort</title>
 </head>
@@ -16,7 +19,7 @@
 <body>
     <header class="hero-section">
         <a href="index.html" class="header-link">
-            <h1 class="header-heading" > Philip's Spa & Resort</h1>
+            <h1 class="header-heading"> Philip's Spa & Resort</h1>
         </a>
         <nav>
             <ul class="navigation-bar">
@@ -33,19 +36,32 @@
                 </li>
             </ul>
         </nav>
-    </header>
-    <section>
-      <div >
-        TEST </div>
 
-    </section>
-    <section> SPA pictures & Resort pictures </section>
-    <section>Big announcement!
-        Try our new pool/dish/resturant/massage
-        with button and picture
-    </section>
+        <section>
+            <div class="text-image-header">
+                The ultimate luxury for your body, mind, and soul!
+
+            </div>
+
+        </section>
+    </header>
+   
+    <!--  borrowed this footer from https://alvarotrigo.com/blog/website-footers/, and changed some small stuff on it.-->
     <footer>
-        link and icons to our social medias
+        <div class="footer">
+            <div class="row">
+                <a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook"></i></a>
+                <a href="https://www.instagram.com/" target="_blank"><i class="fa fa-instagram"></i></a>
+                <a href="https://www.youtube.com/" target="_blank"><i class="fa fa-youtube"></i></a>
+                <a href="https://www.twitter.com/" target="_blank"><i class="fa fa-twitter"></i></a>
+            </div>
+
+            <div class="row">
+                <ul>
+                    <li><a href="mailto:philip.persson.code@gmail.com" target="_blank">Contact us</a></li>
+                    <li><a href="booking.html">Our Services</a></li>
+                </ul>
+            </div>
     </footer>
 
 </body>
