--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
             </div>
         </div>
     </section>
+      <!--  borrowed this footer from https://alvarotrigo.com/blog/website-footers/, and changed some small stuff on it.-->
     <footer>
         <div class="footer">
             <div class="row">
