added main sections in my coding.

--- a/about-us.html
+++ b/about-us.html
@@ -37,6 +37,13 @@
 
         </section>
     </header>
+<main>
+<section>
+</section>
+<section>
+    
+</section>
+</main>
      <!--  borrowed this footer from https://alvarotrigo.com/blog/website-footers/, and changed some small stuff on it.-->
     <footer>
         <div class="footer">
