--- a/booking.html
+++ b/booking.html
@@ -44,6 +44,7 @@
             referrerpolicy="no-referrer-when-downgrade"></iframe>
 
 </header>
+<main>
         <section>
             <div class="text-image-header-booking">
             Please contact us in the form below if you have any questions, or want to book
@@ -82,7 +83,7 @@
 
             </form>
         </div>
-
+    </main>
 
     <!--  borrowed this footer from https://alvarotrigo.com/blog/website-footers/, and changed some small stuff on it.-->
     <footer>
