--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 
         </section>
     </header>
+<main>
     <section id="announcements">
         <h2 id="big-header">Try our new weekend stuff!</h2>
         <div id="left-announcement">
@@ -69,6 +70,7 @@
             </div>
         </div>
     </section>
+</main>
       <!--  borrowed this footer from https://alvarotrigo.com/blog/website-footers/, and changed some small stuff on it.-->
     <footer>
         <div class="footer">
