added email required on emailaddress.

--- a/booking.html
+++ b/booking.html
@@ -67,7 +67,7 @@
                 <input type="text" id="name" name="name" placeholder="Full Name">
 
                 <label for="email"></label>
-                <input type="text" id="email" name="email" placeholder="Email Address">
+                <input type="email" id="email" name="email" placeholder="Email Address">
 
                 <label for="Subject"></label>
                 <select id="subject" name="subject">
