--- a/about-us.html
+++ b/about-us.html
@@ -36,17 +36,19 @@
                 </li>
             </ul>
         </nav>
-
-        <section>
-            <div class="text-image-header">
-                The ultimate luxury for your body, mind, and soul!
-
-            </div>
-
-        </section>
     </header>
 <main>
-   
+    <section>
+        <h2 class="facilities-header">Facilities</h2>
+        <p class="facilities-text"> Down below, can you find what facilities we can offer here at Philips Spa & Resort</p>
+           </section>
+           
+           <div class="image-container">
+            <img src="../images/gym-pic.jpg;" alt="gym location">
+            <img src="https://static.wixstatic.com/media/f6717b_1a8e65b7ea134cfab2a87a3d9ff1fc4d~mv2_d_6124_4082_s_4_2.jpg/v1/crop/x_0,y_295,w_6124,h_3492/fill/w_840,h_612,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/IMG_5176.jpg">
+            <img src="https://imgur.com/eog5eFZ.gif">
+            <img src="https://imgur.com/nUJVBmO.jpg">
+          </div>
 
     
 </main>
