--- a/about-us.html
+++ b/about-us.html
@@ -44,10 +44,12 @@
            </section>
            
            <div class="image-container">
-            <img src="../images/gym-pic.jpg;" alt="gym location">
-            <img src="https://static.wixstatic.com/media/f6717b_1a8e65b7ea134cfab2a87a3d9ff1fc4d~mv2_d_6124_4082_s_4_2.jpg/v1/crop/x_0,y_295,w_6124,h_3492/fill/w_840,h_612,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/IMG_5176.jpg">
-            <img src="https://imgur.com/eog5eFZ.gif">
-            <img src="https://imgur.com/nUJVBmO.jpg">
+            <img src="assets/images/gym-pic.jpg" alt="gym location">
+            <img src="assets/images/resort-spa.webp" alt="hotellroom" >
+            <img src="assets/images/massage-hand.jpg" alt="handmassage">
+            <img src="assets/images/pool-spa.jpg" alt="spa pool">
+            <img src="assets/images/restaurant.jpg" alt="indoor enviroment resturant ">
+            <img src="assets/images/sauna-spa.jpg" alt="sauna">
           </div>
 
     
