separated the img in 3 different containers.

--- a/about-us.html
+++ b/about-us.html
@@ -37,24 +37,46 @@
             </ul>
         </nav>
     </header>
-<main>
-    <section>
-        <h2 class="facilities-header">Facilities</h2>
-        <p class="facilities-text"> Down below, can you find what facilities we can offer here at Philips Spa & Resort</p>
-           </section>
-           
-           <div class="image-container">
-            <img src="assets/images/gym-pic.jpg" alt="gym location">
-            <img src="assets/images/resort-spa.webp" alt="hotellroom" >
-            <img src="assets/images/massage-hand.jpg" alt="handmassage">
-            <img src="assets/images/pool-spa.jpg" alt="spa pool">
-            <img src="assets/images/restaurant.jpg" alt="indoor enviroment resturant ">
-            <img src="assets/images/sauna-spa.jpg" alt="sauna">
-          </div>
+    <main>
+        <section>
+            <h2 class="facilities-header">Facilities</h2>
+            <p class="facilities-text"> Down below, can you find what facilities we can offer here at Philips Spa &
+                Resort</p>
+        </section>
+        <div>
+            <div id="image-container-1">
+                <img src="assets/images/pool-spa.jpg" alt="spa pool">
+                <h3>Pool and relax</h3>
+                <p>Here can you try out both the warm- and ice-cold bath. The ice-bath is good for the muscles and
+                    prevention of injuries. </p>
+                <img src="assets/images/sauna-spa.jpg" alt="sauna">
+                <h3>Sauna</h3>
+                <p>The sauna is also a very popular recovery & relax area. We offer both infra-red saunas, and ofcourse
+                    the
+                    classic ones.</p>
+            </div>
+            <div id="image-container-2">
+                <img src="assets/images/gym-pic.jpg" alt="gym location">
+                <h3>Gym</h3>
+                <p>We have our own gym, and it's open 24/7 </p>
+                <img src="assets/images/resort-spa.webp" alt="hotelroom">
+                <h3>Rooms</h3>
+                <p>Book our fresh room. Single or double-beds!</p>
+            </div>
+            <div id="image-container-2">
+                <img src="assets/images/massage-hand.jpg" alt="handmassage">
+                <h3>Massage</h3>
+                <p>We have alot of different type of massages. Hot stones, sports massage, classic massage & chocolate
+                    massage.</p>
+                <img src="assets/images/restaurant.jpg" alt="indoor enviroment resturant ">
+                <h3>Resturant</h3>
+                <p>Try our buffet, or the 3 course-menu in our cozy resturant</p>
+            </div>
+        </div>
 
-    
-</main>
-      <!--  borrowed this footer from https://alvarotrigo.com/blog/website-footers/, and changed some small stuff on it.-->
+
+    </main>
+    <!--  borrowed this footer from https://alvarotrigo.com/blog/website-footers/, and changed some small stuff on it.-->
     <footer>
         <div class="footer">
             <div class="row">
