--- a/about-us.html
+++ b/about-us.html
@@ -43,11 +43,12 @@
             <p class="facilities-text"> Down below, can you find what facilities we can offer here at Philips Spa &
                 Resort</p>
         </section>
-        <div>
-            <div id="image-container-1">
+        <div class="rows">
+            <div class="image-container">
                 <img src="assets/images/pool-spa.jpg" alt="spa pool">
                 <h3>Pool and relax</h3>
-                <p>Here can you try out both the warm- and ice-cold bath. The ice-bath is good for the muscles and
+                <p>Here can you try out both the warm- and ice-cold bath. <br>
+                    The ice-bath is good for the muscles and
                     prevention of injuries. </p>
                 <img src="assets/images/sauna-spa.jpg" alt="sauna">
                 <h3>Sauna</h3>
@@ -55,7 +56,7 @@
                     the
                     classic ones.</p>
             </div>
-            <div id="image-container-2">
+            <div class="image-container">
                 <img src="assets/images/gym-pic.jpg" alt="gym location">
                 <h3>Gym</h3>
                 <p>We have our own gym, and it's open 24/7 </p>
@@ -63,10 +64,11 @@
                 <h3>Rooms</h3>
                 <p>Book our fresh room. Single or double-beds!</p>
             </div>
-            <div id="image-container-2">
+            <div class="image-container">
                 <img src="assets/images/massage-hand.jpg" alt="handmassage">
                 <h3>Massage</h3>
-                <p>We have alot of different type of massages. Hot stones, sports massage, classic massage & chocolate
+                <p>We have alot of different type of massages. <br>
+                    Hot stones, sports massage, classic massage & chocolate
                     massage.</p>
                 <img src="assets/images/restaurant.jpg" alt="indoor enviroment resturant ">
                 <h3>Resturant</h3>
