added target blank for when submit the form.

--- a/booking.html
+++ b/booking.html
@@ -54,11 +54,10 @@
             </div>
         </section>
 
+        <!-- took inspiration with form from https://www.w3schools.com/howto/howto_css_contact_form.asp -->
 
         <div class="form-wrap">
-
-            <!-- took inspiration with form from https://www.w3schools.com/howto/howto_css_contact_form.asp -->
-            <form action="https://formdump.codeinstitute.net/">
+            <form action="https://formdump.codeinstitute.net/" method="post" target="_blank">
 
                 <label for="name"></label>
                 <input type="text" id="name" name="name" placeholder="Full Name">
