added text in the readme file. Also changed the header of index file - the offer.

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </header>
 <main>
     <section id="announcements">
-        <h2 id="big-header">Try our new weekend stuff!</h2>
+        <h2 id="big-header">Try our new weekend package!</h2>
         <div id="left-announcement">
             <div class="left-announcement-heading">
                 <h3>Weekend-massage</h3>
