--- a/about-us.html
+++ b/about-us.html
@@ -50,6 +50,8 @@
                 <p>Here can you try out both the warm- and ice-cold bath. <br>
                     The ice-bath is good for the muscles and
                     prevention of injuries. </p>
+            </div>
+            <div class="image-container">
                 <img src="assets/images/sauna-spa.jpg" alt="sauna">
                 <h3>Sauna</h3>
                 <p>The sauna is also a very popular recovery & relax area. We offer both infra-red saunas, and ofcourse
@@ -60,6 +62,8 @@
                 <img src="assets/images/gym-pic.jpg" alt="gym location">
                 <h3>Gym</h3>
                 <p>We have our own gym, and it's open 24/7 </p>
+            </div>
+            <div class="image-container">
                 <img src="assets/images/resort-spa.webp" alt="hotelroom">
                 <h3>Rooms</h3>
                 <p>Book our fresh room. Single or double-beds!</p>
@@ -70,9 +74,11 @@
                 <p>We have alot of different type of massages. <br>
                     Hot stones, sports massage, classic massage & chocolate
                     massage.</p>
-                <img src="assets/images/restaurant.jpg" alt="indoor enviroment resturant ">
+            </div>
+            <div class="image-container"><img src="assets/images/restaurant.jpg" alt="indoor enviroment resturant ">
                 <h3>Resturant</h3>
                 <p>Try our buffet, or the 3 course-menu in our cozy resturant</p>
+
             </div>
         </div>
 
