--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <div class="row">
                 <ul>
                     <li><a href="mailto:philip.persson.code@gmail.com" target="_blank">Contact us</a></li>
-                    <li><a href="booking.html">Our Services</a></li>
+                    <li><a href="about-us.html">Our Services</a></li>
                 </ul>
             </div>
     </footer>
