added more info in the about us section. And also switched places in some of the items.

--- a/about-us.html
+++ b/about-us.html
@@ -54,19 +54,10 @@
             <div class="image-container">
                 <img src="assets/images/sauna-spa.jpg" alt="sauna">
                 <h3>Sauna</h3>
-                <p>The sauna is also a very popular recovery & relax area. We offer both infra-red saunas, and ofcourse
+                <p>The sauna is also a very popular recovery & relax area. <br> We offer both infra-red saunas, and
+                    ofcourse
                     the
                     classic ones.</p>
-            </div>
-            <div class="image-container">
-                <img src="assets/images/gym-pic.jpg" alt="gym location">
-                <h3>Gym</h3>
-                <p>We have our own gym, and it's open 24/7 </p>
-            </div>
-            <div class="image-container">
-                <img src="assets/images/resort-spa.webp" alt="hotelroom">
-                <h3>Rooms</h3>
-                <p>Book our fresh room. Single or double-beds!</p>
             </div>
             <div class="image-container">
                 <img src="assets/images/massage-hand.jpg" alt="handmassage">
@@ -75,11 +66,25 @@
                     Hot stones, sports massage, classic massage & chocolate
                     massage.</p>
             </div>
+            <div class="image-container">
+                <img src="assets/images/gym-pic.jpg" alt="gym location">
+                <h3>Gym</h3>
+                <p>We have our own gym, and it's open 24/7! <br> Our most popular equipment are the treadmil, barbells,
+                    <br>rowing maching and bicycles.</p>
+            </div>
+
+            <div class="image-container">
+                <img src="assets/images/resort-spa.webp" alt="hotelroom">
+                <h3>Rooms</h3>
+                <p>Book our fresh room. The standard rooms, <br> or the Queen-size beds, with your own hot tub.</p>
+            </div>
             <div class="image-container"><img src="assets/images/restaurant.jpg" alt="indoor enviroment resturant ">
                 <h3>Resturant</h3>
-                <p>Try our buffet, or the 3 course-menu in our cozy resturant</p>
-
+                <p>Try our buffet, the private chef-table <br> or the 3 course-menu in our cozy resturant. <br>
+                    Breakfast is included in every package.</p>
             </div>
+
+
         </div>
 
 
