--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </header>
     <main>
         <section id="announcements">
-            <h2 id="big-header">Try our new weekend package!</h2>
+            <h2 id="big-header">Try our new weekend packages!</h2>
             <div id="left-announcement">
                 <div class="left-announcement-heading">
                     <h3>Weekend-massage</h3>
