--- a/about-us.html
+++ b/about-us.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Spa and Resort for everyone">
-    <meta name=keywords content="spa, resort, food, everyone">
+    <meta name="keywords" content="spa, resort, food, everyone">
     <link rel="stylesheet" href="assets/CSS/about-us.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
