added closing tag where i missed one. and fixed some minor errors

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <nav>
             <ul class="navigation-bar">
                 <li>
-                    <a href="index.html"> Home <i class="bi bi-house-fill"></i></i></a>
+                    <a href="index.html"> Home <i class="bi bi-house-fill"></i></a>
                 </li>
 
                 <li>
@@ -37,13 +37,13 @@
             </ul>
         </nav>
 
-        <section>
+        <div>
             <div class="text-image-header">
                 The ultimate luxury for your body, mind, and soul!
 
             </div>
 
-        </section>
+        </div>
     </header>
     <main>
         <section id="announcements">
@@ -88,6 +88,7 @@
                     <li><a href="about-us.html">Our Services</a></li>
                 </ul>
             </div>
+        </div>
     </footer>
 
 </body>
