--- a/booking.html
+++ b/booking.html
@@ -41,7 +41,7 @@
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4070.8388338621585!2d18.06626026218508!3d59.32595122980502!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x465f9d587e4c4a01%3A0xbdf97a9648763e36!2sKungliga%20slottet!5e0!3m2!1ssv!2sse!4v1675936660324!5m2!1ssv!2sse"
             width="600" height="450" allowfullscreen="" loading="lazy"
             referrerpolicy="no-referrer-when-downgrade"></iframe>
-            
+
     </header>
     <main>
         <section>
@@ -55,23 +55,17 @@
         <!-- took inspiration with form from https://www.w3schools.com/howto/howto_css_contact_form.asp -->
 
         <div class="form-wrap">
-            <form action="https://formdump.codeinstitute.net/" method="post" target="_blank">
-
-                <label for="name"></label>
-                <input type="text" id="name" name="name" placeholder="Full Name">
-
-                <label for="email"></label>
-                <input type="email" id="email" name="email" placeholder="Email Address">
-
-                <label for="Subject"></label>
+            <form action="form-submit.html" target="_blank">
+                <input type="text" id="name" name="name" placeholder="Full Name" required>
+                <input type="email" id="email" name="email" placeholder="Email Address" required>
                 <select id="subject" name="subject">
                     <option value="subject">Select Subject</option>
                     <option value="spa">Spa</option>
                     <option value="resturant">Resturant</option>
                     <option value="resort">Resort</option>
                 </select>
-                <textarea id="submit" name="submit" placeholder="Type your question here.."
-                    style="height:200px"></textarea>
+                <textarea id="submit" name="submit" placeholder="Type your question here.." style="height:200px"
+                    required></textarea>
                 <br>
                 <input type="submit" value="Send">
 
