--- a/booking.html
+++ b/booking.html
@@ -40,7 +40,7 @@
         <iframe class="google-maps"
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4070.8388338621585!2d18.06626026218508!3d59.32595122980502!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x465f9d587e4c4a01%3A0xbdf97a9648763e36!2sKungliga%20slottet!5e0!3m2!1ssv!2sse!4v1675936660324!5m2!1ssv!2sse"
             width="600" height="450" allowfullscreen="" loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"></iframe>
+            referrerpolicy="no-referrer-when-downgrade">location google</iframe>
 
     </header>
     <main>
