added aria-label for the footer.

--- a/booking.html
+++ b/booking.html
@@ -77,18 +77,24 @@
     <footer>
         <div class="footer">
             <div class="row">
-                <a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook"></i></a>
-                <a href="https://www.instagram.com/" target="_blank"><i class="fa fa-instagram"></i></a>
-                <a href="https://www.youtube.com/" target="_blank"><i class="fa fa-youtube"></i></a>
-                <a href="https://www.twitter.com/" target="_blank"><i class="fa fa-twitter"></i></a>
+                <a href="https://www.facebook.com/" target="_blank" aria-label="link to our facebook-page"><i
+                        class="fa fa-facebook"></i></a>
+                <a href="https://www.instagram.com/" target="_blank" aria-label="link to our instagram-page"><i
+                        class="fa fa-instagram"></i></a>
+                <a href="https://www.youtube.com/" target="_blank" aria-label="link to our youtube-page"><i
+                        class="fa fa-youtube"></i></a>
+                <a href="https://www.twitter.com/" target="_blank" aria-label="link to our twitter-page"><i
+                        class="fa fa-twitter"></i></a>
             </div>
 
             <div class="row">
                 <ul>
-                    <li><a href="mailto:philip.persson.code@gmail.com" target="_blank">Contact us</a></li>
-                    <li><a href="about-us.html">Our Services</a></li>
+                    <li><a href="mailto:philip.persson.code@gmail.com" target="_blank"
+                            aria-label="link to our email">Contact us</a></li>
+                    <li><a href="about-us.html" aria-label="link to our services site">Our Services</a></li>
                 </ul>
             </div>
+        </div>
     </footer>
 
 </body>
