added comments in my html to make it easier to follow my code.

--- a/about-us.html
+++ b/about-us.html
@@ -12,7 +12,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Play&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
+    <!-- Main header -->
     <title>Philip's Spa & Resort</title>
 </head>
 
@@ -21,36 +21,33 @@
         <a href="index.html" class="header-link">
             <h1 class="header-heading"> Philip's Spa & Resort</h1>
         </a>
+        <!-- Nav bar -->
         <nav>
             <ul class="navigation-bar">
-                <li>
-                    <a href="index.html"> Home <i class="bi bi-house-fill"></i></i></a>
-                </li>
-
-                <li>
-                    <a href="booking.html"> Booking <i class="bi bi-calendar3"></i></a>
-                </li>
-
-                <li>
-                    <a href="about-us.html"> About us <i class="bi bi-person-vcard-fill"></i> </a>
-                </li>
+                <li><a href="index.html"> Home <i class="bi bi-house-fill"></i></i></a></li>
+                <li><a href="booking.html"> Booking <i class="bi bi-calendar3"></i></a></li>
+                <li><a href="about-us.html"> About us <i class="bi bi-person-vcard-fill"></i> </a></li>
             </ul>
         </nav>
     </header>
+    <!-- Facilities with images and text -->
     <main>
         <section>
             <h2 class="facilities-header">Facilities</h2>
             <p class="facilities-text"> Down below, can you find what facilities we can offer here at Philips Spa &
                 Resort</p>
         </section>
+
         <div class="rows">
             <div class="image-container">
+
                 <img src="assets/images/pool-spa.jpg" alt="spa pool">
                 <h3>Pool and relax</h3>
                 <p>Here can you try out both the warm- and ice-cold bath. <br>
                     The ice-bath is good for the muscles and
                     prevention of injuries. </p>
             </div>
+
             <div class="image-container">
                 <img src="assets/images/sauna-spa.jpg" alt="sauna">
                 <h3>Sauna</h3>
@@ -59,6 +56,7 @@
                     the
                     classic ones.</p>
             </div>
+
             <div class="image-container">
                 <img src="assets/images/massage-hand.jpg" alt="handmassage">
                 <h3>Massage</h3>
@@ -66,17 +64,20 @@
                     Hot stones, sports massage, classic massage & chocolate
                     massage.</p>
             </div>
+
             <div class="image-container">
                 <img src="assets/images/gym-pic.jpg" alt="gym location">
                 <h3>Gym</h3>
                 <p>We have our own gym, and it's open 24/7! <br> Our most popular equipment are the treadmil, barbells,
                     <br>rowing maching and bicycles.</p>
             </div>
+
             <div class="image-container">
                 <img src="assets/images/resort-spa.webp" alt="hotelroom">
                 <h3>Rooms</h3>
                 <p>Book our fresh room. The standard rooms, <br> or the Queen-size beds, with your own hot tub.</p>
             </div>
+
             <div class="image-container"><img src="assets/images/restaurant.jpg" alt="indoor enviroment resturant ">
                 <h3>Resturant</h3>
                 <p>Try our buffet, the private chef-table <br> or the 3 course-menu in our cozy resturant. <br>
@@ -84,29 +85,34 @@
             </div>
         </div>
     </main>
+    <!-- Footer -->
     <footer>
         <div class="footer">
             <div class="row">
                 <a href="https://www.facebook.com/" target="_blank" aria-label="link to our facebook-page"><i
-                        class="fa fa-facebook"></i></a>
+                        class="fa fa-facebook"></i>
+                </a>
                 <a href="https://www.instagram.com/" target="_blank" aria-label="link to our instagram-page"><i
-                        class="fa fa-instagram"></i></a>
+                        class="fa fa-instagram"></i>
+                </a>
                 <a href="https://www.youtube.com/" target="_blank" aria-label="link to our youtube-page"><i
-                        class="fa fa-youtube"></i></a>
+                        class="fa fa-youtube"></i>
+                </a>
                 <a href="https://www.twitter.com/" target="_blank" aria-label="link to our twitter-page"><i
-                        class="fa fa-twitter"></i></a>
+                        class="fa fa-twitter"></i>
+                </a>
             </div>
-
             <div class="row">
                 <ul>
                     <li><a href="mailto:philip.persson.code@gmail.com" target="_blank"
-                            aria-label="link to our email">Contact us</a></li>
-                    <li><a href="about-us.html" aria-label="link to our services site">Our Services</a></li>
+                            aria-label="link to our email">Contact us</a>
+                    </li>
+                    <li><a href="about-us.html" aria-label="link to our services site">Our Services</a>
+                    </li>
                 </ul>
             </div>
         </div>
     </footer>
-
 </body>
 
 </html>
