--- a/booking.html
+++ b/booking.html
@@ -12,48 +12,39 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Play&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
+    <!-- Main header -->
     <title>Philip's Spa & Resort</title>
 </head>
 
 <body class="body-background">
+
     <header class="hero-section-booking">
         <a href="index.html" class="header-link">
             <h1 class="header-heading"> Philip's Spa & Resort</h1>
         </a>
+        <!-- Nav bar -->
         <nav>
             <ul class="navigation-bar">
-                <li>
-                    <a href="index.html"> Home <i class="bi bi-house-fill"></i></i></a>
-                </li>
-
-                <li>
-                    <a href="booking.html"> Booking <i class="bi bi-calendar3"></i></a>
-                </li>
-
-                <li>
-                    <a href="about-us.html"> About us <i class="bi bi-person-vcard-fill"></i> </a>
-                </li>
+                <li><a href="index.html"> Home <i class="bi bi-house-fill"></i></a></li>
+                <li><a href="booking.html"> Booking <i class="bi bi-calendar3"></i></a></li>
+                <li><a href="about-us.html"> About us <i class="bi bi-person-vcard-fill"></i></a></li>
             </ul>
         </nav>
+
         <h2 class="booking-header"> Where to find us?</h2>
         <iframe class="google-maps"
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4070.8388338621585!2d18.06626026218508!3d59.32595122980502!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x465f9d587e4c4a01%3A0xbdf97a9648763e36!2sKungliga%20slottet!5e0!3m2!1ssv!2sse!4v1675936660324!5m2!1ssv!2sse"
-            width="600" height="450" allowfullscreen="" loading="lazy" name="mylocation" aria-label="location of the spa"
-            referrerpolicy="no-referrer-when-downgrade">location google</iframe>
-
+            width="600" height="450" allowfullscreen="" loading="lazy" name="mylocation"
+            aria-label="location of the spa" referrerpolicy="no-referrer-when-downgrade">location google</iframe>
     </header>
+    <!-- Text in the square -->
     <main>
         <section>
-
             <div class="text-image-header-booking">
                 Please contact us in the form below if you have any questions, or want to book.
-
             </div>
         </section>
-
-      
-
+        <!-- Contact form -->
         <div class="form-wrap">
             <form action="form-submit.html" target="_blank">
                 <input type="text" id="name" name="name" placeholder="Full Name" required>
@@ -68,11 +59,10 @@
                     required></textarea>
                 <br>
                 <input type="submit" value="Send">
-
             </form>
         </div>
     </main>
-
+    <!-- Footer -->
     <footer>
         <div class="footer">
             <div class="row">
@@ -95,7 +85,6 @@
             </div>
         </div>
     </footer>
-
 </body>
 
 </html>
