--- a/form-submit.html
+++ b/form-submit.html
@@ -8,13 +8,17 @@
     <link rel="stylesheet" href="assets/CSS/form-submit.css">
     <title>Document</title>
 </head>
+<!-- contact-page text -->
 
 <body>
     <h1>Thank you for getting in touch with me!</h1>
+
     <h2>We will get back to you shortly.</h2>
 
     <div class="home-button">
-        <a href="index.html"> <button>Go back to Home</button> </a>
+        <a href="index.html">
+            <button>Go back to Home</button>
+        </a>
     </div>
 </body>
 
