--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Play&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
+    <!-- Main header -->
     <title>Philip's Spa & Resort</title>
 </head>
 
@@ -21,30 +21,22 @@
         <a href="index.html" class="header-link">
             <h1 class="header-heading"> Philip's Spa & Resort</h1>
         </a>
+        <!-- Nav bar -->
         <nav>
             <ul class="navigation-bar">
-                <li>
-                    <a href="index.html"> Home <i class="bi bi-house-fill"></i></a>
-                </li>
-
-                <li>
-                    <a href="booking.html"> Booking <i class="bi bi-calendar3"></i></a>
-                </li>
-
-                <li>
-                    <a href="about-us.html"> About us <i class="bi bi-person-vcard-fill"></i> </a>
-                </li>
+                <li><a href="index.html"> Home <i class="bi bi-house-fill"></i></a></li>
+                <li><a href="booking.html"> Booking <i class="bi bi-calendar3"></i></a></li>
+                <li><a href="about-us.html"> About us <i class="bi bi-person-vcard-fill"></i> </a></li>
             </ul>
         </nav>
-
+        <!-- Text in the square -->
         <div>
             <div class="text-image-header">
                 The ultimate luxury for your body, mind, and soul!
-
             </div>
-
         </div>
     </header>
+    <!-- Announcements and youtube links -->
     <main>
         <section id="announcements">
             <h2 id="big-header">Try our new weekend packages!</h2>
@@ -57,7 +49,6 @@
                             alt="woman with hot stones"></a>
                     <p>This is our new massage with hot stones. <br>
                         klick on the picture to see how it's performed!</p>
-
                 </div>
                 <div id="right-announcement">
                     <h3>Weekend-buffet</h3>
@@ -72,7 +63,7 @@
             </div>
         </section>
     </main>
-    
+    <!-- Footer -->
     <footer>
         <div class="footer">
             <div class="row">
